[package]
name = "reflect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.0.0-rc.3", features = ["server", "http1"] }
http-body-util = "0.1.0-rc.2"
net2 = "0.2.39"
log = "0.4.19"
env_logger = "0.10.0"
url = "2.4.0"
futures = "0.3.28"
